# kb-rag

./: .gitignore  README.md  config.example.yaml  config.py  pyproject.toml  requirements.txt  run.sh
mcp/: server.py
scripts/: backfill_lightrag.py  migrate_brain_memory.py  migrate_from_testcase_rag.py
server/: api.py  engine.py  lightrag_engine.py  mcp_handler.py  models.py  search.py
server/static/: index.html
tests/: test_core.py
