[project]
name = "kb-rag"
version = "1.0.0"
description = "通用知识库 — 多类型文档存储 + 向量/BM25 混合搜索 + LightRAG 知识图谱"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "chromadb>=1.5.0",
    "sentence-transformers>=2.2.0",
    "jieba>=0.42.0",
    "rank-bm25>=0.2.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "lightrag-hku>=1.0.0",
    "openai>=1.0.0",
]

[project.scripts]
kb-rag-api = "server.api:app"

[tool.uv]
dev-dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
